--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "expo": "~50.0.11",
-    "expo-status-bar": "~1.11.1",
+    "@tanstack/react-query": "5.25.0",
+    "expo": "50.0.11",
+    "expo-status-bar": "1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@babel/core": "7.24.0",
+    "@types/react": "18.2.45",
+    "eslint": "8.57.0",
+    "eslint-config-universe": "12.0.0",
+    "typescript": "5.4.2"
   },
   "private": true
 }
