https://tanstack.com/query/v5/docs/eslint/eslint-plugin-query

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.24.0",
+    "@tanstack/eslint-plugin-query": "5.20.1",
     "@types/react": "18.2.45",
     "eslint": "8.57.0",
     "eslint-config-universe": "12.0.0",
