--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint .",
-    "ci": "npm run lint && tsc"
+    "test": "jest",
+    "ci": "npm run lint && tsc && npm test"
   },
   "dependencies": {
     "@tanstack/react-query": "5.25.0",
     "expo": "50.0.11",
     "expo-status-bar": "1.11.1",
+    "jest": "29.3.1",
+    "jest-expo": "50.0.3",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2"
@@ -21,10 +24,18 @@
   "devDependencies": {
     "@babel/core": "7.24.0",
     "@tanstack/eslint-plugin-query": "5.20.1",
+    "@testing-library/react-native": "12.4.3",
+    "@types/jest": "29.5.12",
     "@types/react": "18.2.45",
     "eslint": "8.57.0",
     "eslint-config-universe": "12.0.0",
     "typescript": "5.4.2"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
+  }
 }
