--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@tanstack/eslint-plugin-query": "5.20.1",
     "@testing-library/react-native": "12.4.3",
     "@types/jest": "29.5.12",
+    "@types/lodash": "4.14.202",
     "@types/react": "18.2.45",
     "eslint": "8.57.0",
     "eslint-config-universe": "12.0.0",
+    "lodash": "4.17.21",
     "typescript": "5.4.2"
   },
   "private": true,
