--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "8.57.0",
     "eslint-config-universe": "12.0.0",
     "lodash": "4.17.21",
+    "prettier": "3.2.5",
     "typescript": "5.4.2"
   },
   "private": true,
