--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
     },
