--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-universe": "12.0.0",
     "lodash": "4.17.21",
     "prettier": "3.2.5",
+    "react-test-renderer": "18.3.1",
     "typescript": "5.4.2"
   },
   "private": true,
