--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@types/jest": "29.5.12",
     "@types/lodash": "4.14.202",
     "@types/react": "18.3.12",
+    "@typescript-eslint/eslint-plugin": "8.22.0",
+    "eslint": "8.57.1",
+    "eslint-config-expo": "8.0.1",
     "jest": "29.7.0",
     "jest-expo": "52.0.3",
-    "eslint": "8.57.1",
-    "eslint-config-universe": "12.0.0",
     "lodash": "4.17.21",
     "prettier": "3.2.5",
     "react-test-renderer": "18.3.1",
