--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@babel/core": "7.26.7",
     "@tanstack/eslint-plugin-query": "5.65.0",
     "@testing-library/react-native": "12.4.3",
+    "@types/babel__core": "7.20.5",
+    "@types/eslint": "9.6.1",
     "@types/jest": "29.5.12",
     "@types/lodash": "4.14.202",
     "@types/react": "18.3.12",
+    "@types/react-test-renderer": "18.3.1",
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "eslint": "8.57.1",
     "eslint-config-expo": "8.0.1",
