--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         java-version: 21
         distribution: temurin
+        cache: 'gradle'
 
     - name: Android SDK
       uses: amyu/setup-android@v4
