--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "lint": "eslint --max-warnings=0 .",
     "test": "jest",
-    "ci": "npm run lint && tsc && npm test && ./android/gradlew -p android test"
+    "android-test": "./android/gradlew -p android test",
+    "ci": "npm run lint && tsc && npm test && npm run android-test"
   },
   "dependencies": {
     "@tanstack/react-query": "5.65.1",
