--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,8 +22,7 @@ jobs:
         distribution: temurin
         cache: 'gradle'
 
-    - name: Android SDK
-      uses: amyu/setup-android@v4
+    - uses: amyu/setup-android@v4
 
     - name: npm install
       run: |
