--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/setup-node@v4.0.1
       with:
         node-version-file: '.node-version'
+        cache: 'npm'
 
     - uses: actions/setup-java@v4.7.0
       with:
