--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "18.3.12",
     "@types/react-test-renderer": "18.3.1",
     "@typescript-eslint/eslint-plugin": "8.22.0",
+    "eas-cli": "15.0.4",
     "eslint": "8.57.1",
     "eslint-config-expo": "8.0.1",
     "jest": "29.7.0",
