--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "expo-status-bar": "2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-safe-area-context": "4.12.0",
+    "expo-dev-client": "5.0.11"
   },
   "devDependencies": {
     "@babel/core": "7.26.7",
