--- a/app.json
+++ b/app.json
@@ -17,7 +17,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "uk.me.jeremygreen.expoexperiments"
+      "bundleIdentifier": "uk.me.jeremygreen.expoexperiments",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
