Set same node version in eas.json as are using in .node-version file (and therefore locally and on github actions).

--- a/eas.json
+++ b/eas.json
@@ -5,6 +5,7 @@
   },
   "build": {
     "production": {
+      "node": "20.10.0",
       "autoIncrement": true,
       "android": {
         "image": "ubuntu-22.04-jdk-17-ndk-r26b"
