Move expo module into different java/android package than app, to avoid build failure from eas build --local. Wasn't causing a problem for github action build or remote EAS build...

--- a/modules/expo-experiments/expo-module.config.json
+++ b/modules/expo-experiments/expo-module.config.json
@@ -11,7 +11,7 @@
   },
   "android": {
     "modules": [
-      "uk.me.jeremygreen.expoexperiments.ExpoExperimentsModule"
+      "uk.me.jeremygreen.expoexperiments.module.ExpoExperimentsModule"
     ]
   }
 }
