ArtiomTr/jest-coverage-report-action was trying to run jest itself (and failing). Try to stop this by setting base-coverage-file too.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -53,7 +53,8 @@ jobs:
     - name: jest coverage
       uses: ArtiomTr/jest-coverage-report-action@v2.3.1
       with:
-        coverage-file: ./coverage/coverage-final.json
+        coverage-file: coverage/coverage-final.json
+        base-coverage-file: coverage/coverage-final.json
 
     - name: npm run android-test
       run: |
