Need to use json-summary reporter. https://github.com/ArtiomTr/jest-coverage-report-action/issues/268

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -48,13 +48,13 @@ jobs:
     - name: npm test
       run: |
         . environment
-        npm test -- --collect-coverage
+        npm test -- --coverage-reporters=json-summary
 
     - name: jest coverage
       uses: ArtiomTr/jest-coverage-report-action@v2.3.1
       with:
-        coverage-file: coverage/coverage-final.json
-        base-coverage-file: coverage/coverage-final.json
+        coverage-file: coverage/coverage-summary.json
+        base-coverage-file: coverage/coverage-summary.json
 
     - name: npm run android-test
       run: |
