Move coverage reporters into package.json.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint --max-warnings=0 .",
-    "test": "jest --collect-coverage",
+    "test": "jest --collectCoverage --coverageReporters=text --coverageReporters=json --coverageReporters=json-summary --coverageReporters=lcov",
     "android-test": "./android/gradlew -p android app:test expo-experiments:test",
     "ci": "npm run lint && tsc && npm test && npm run android-test"
   },
