--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -48,7 +48,7 @@ jobs:
     - name: npm test
       run: |
         . environment
-        npm test -- --coverage-reporters=json-summary
+        npm test
 
     - name: jest coverage
       uses: ArtiomTr/jest-coverage-report-action@v2.3.1
