Debugging github actions.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --max-warnings=0 .",
     "test": "jest --collectCoverage --coverageReporters=text --coverageReporters=json --coverageReporters=json-summary --coverageReporters=lcov",
     "android-test": "./android/gradlew -p android app:test expo-experiments:test",
-    "ci": "npm run lint && tsc && npm test && npm run android-test"
+    "ci": "npm run lint && tsc && npm test && npm run android-test",
+    "pwd": "pwd"
   },
   "dependencies": {
     "@tanstack/react-query": "5.65.1",
