--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -50,6 +50,12 @@ jobs:
         . environment
         npm test
 
+    - name: pwd
+      run: pwd
+
+    - name: npm run pwd
+      run: npm run pwd
+
     - name: jest coverage
       uses: ArtiomTr/jest-coverage-report-action@v2.3.1
       with:
