--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -51,10 +51,7 @@ jobs:
         npm test
 
     - name: jest coverage
-      uses: ArtiomTr/jest-coverage-report-action@v2.3.1
-      with:
-        coverage-file: coverage/coverage-summary.json
-        base-coverage-file: coverage/coverage-summary.json
+      uses: MishaKav/jest-coverage-comment@1.0.27
 
     - name: npm run android-test
       run: |
