--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -51,7 +51,7 @@ jobs:
         npm test
 
     - name: jest coverage
-      uses: MishaKav/jest-coverage-comment@1.0.27
+      uses: MishaKav/jest-coverage-comment@v1
 
     - name: npm run android-test
       run: |
