--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "dependencies": {
     "@tanstack/react-query": "5.65.1",
     "expo": "52.0.28",
+    "expo-dev-client": "5.0.11",
     "expo-status-bar": "2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-safe-area-context": "4.12.0",
-    "expo-dev-client": "5.0.11"
+    "react-native-safe-area-context": "4.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.7",
@@ -37,6 +37,7 @@
     "jest": "29.7.0",
     "jest-expo": "52.0.3",
     "lodash": "4.17.21",
+    "msw": "2.7.3",
     "prettier": "3.2.5",
     "react-test-renderer": "18.3.1",
     "typescript": "5.7.3"
