--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -96,6 +96,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.1
 
+      - name: download apk
+        uses: actions/download-artifact@v4
+        with:
+          name: app-release.apk
+
       - name: Enable KVM group perms
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
