--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -101,7 +101,7 @@ jobs:
         with:
           name: app-release.apk
 
-      - name: Enable KVM group perms
+      - name: enable KVM group perms
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
