--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -125,5 +125,6 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success() || failure()    # run this step even if previous step failed
         with:
-          name: maestro logs - API ${{ matrix.api-level }}
-          path: ~/.maestro/tests/2025-03-14_161601/**/
+          name: maestro.log - API ${{ matrix.api-level }}
+          path: ~/.maestro/tests/*/maestro.log
+          if-no-files-found: error
