--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -119,7 +119,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: ${{ matrix.api-level }}
-          script: bash -c "adb install app-release.apk && scripts/run_maestro"
+          script: e2e/maestro/run_maestro_ci
 
       - name: maestro logs
         uses: actions/upload-artifact@v4
