--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -128,3 +128,12 @@ jobs:
           name: maestro.log - API ${{ matrix.api-level }}
           path: ~/.maestro/tests/*/maestro.log
           if-no-files-found: error
+
+      - name: logcat
+        uses: actions/upload-artifact@v4
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: logcat.txt - API ${{ matrix.api-level }}
+          path: logcat.txt
+          if-no-files-found: error
+  
