--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -94,7 +94,7 @@ jobs:
     needs: android # for the apk
     strategy:
       matrix:
-        api-level: [29]
+        api-level: [21, 35]
 
     steps:
       - uses: actions/checkout@v4.1.1
