Don't cancel other matrix jobs if one fails.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -93,6 +93,7 @@ jobs:
     runs-on: ubuntu-24.04
     needs: android # for the apk
     strategy:
+      fail-fast: false
       matrix:
         api-level: [21, 35]
 
