reactivecircus/android-emulator-runner defaults to x86, which isn't available for all target levels, so set arch to x86_64.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -120,6 +120,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: ${{ matrix.api-level }}
+          arch: x86_64
           script: e2e/maestro/run_maestro_ci
 
       - name: maestro logs
