--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "android-test": "./android/gradlew -p android app:test expo-experiments:test",
     "android-release-apk": "./android/gradlew -p android app:assembleRelease",
     "android-release-apk-install": "adb install android/app/build/outputs/apk/release/app-release.apk",
-    "ios-release-ipa": "eas build --local -p ios --profile ios-simulator",
+    "ios-release-ipa": "expo build:ios",
     "maestro": "scripts/run_maestro",
     "ci": "npm run lint && tsc && npm test && npm run android-test"
   },
