--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -165,7 +165,11 @@ jobs:
       run: |
         . environment
         cd ios
-        xcodebuild -workspace expoexperiments.xcworkspace -scheme expoexperiments -configuration Release -derivedDataPath build -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.1'
+        xcodebuild -workspace expoexperiments.xcworkspace \
+          -scheme expoexperiments \
+          -configuration Release \
+          -derivedDataPath build \
+          -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.1'
 
     # - name: upload release ipa
     #   uses: actions/upload-artifact@v4
