--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -122,7 +122,7 @@ jobs:
   #       with:
   #         api-level: ${{ matrix.api-level }}
   #         arch: x86_64
-  #         script: e2e/maestro/run_maestro_ci
+  #         script: e2e/maestro/run_maestro_ci android
 
   #     - name: maestro logs
   #       uses: actions/upload-artifact@v4
@@ -177,4 +177,29 @@ jobs:
         name: expoexperiments.app
         path: build
         if-no-files-found: error
+    
+  ios-test:
+    runs-on: macos-14
+    needs: ios # for the app
 
+    steps:
+      - uses: actions/checkout@v4.1.1
+
+      - name: download app
+        uses: actions/download-artifact@v4
+        with:
+          name: expoexperiments.app
+
+      - name: install maestro
+        run: scripts/install_maestro
+
+      - name: maestro
+        run: e2e/maestro/run_maestro_ci ios
+
+      - name: maestro logs
+        uses: actions/upload-artifact@v4
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: maestro.log - API ${{ matrix.api-level }}
+          path: ~/.maestro/tests/*/maestro.log
+          if-no-files-found: error
