--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -175,7 +175,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: expoexperiments.app
-        path: build
+        path: ios/build
         if-no-files-found: error
     
   ios-test:
