Revert "Try building with: -destination 'generic/platform=iOS'"
It didn't work.

This reverts commit 80ae5c8724f418281f692b0a58ebfdc8cbae72c6.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -169,7 +169,7 @@ jobs:
           -scheme expoexperiments \
           -configuration Release \
           -derivedDataPath build \
-          -destination 'generic/platform=iOS'
+          -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.1'
 
     - name: upload release
       uses: actions/upload-artifact@v4
