--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -200,6 +200,6 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success() || failure()    # run this step even if previous step failed
         with:
-          name: maestro logs - API ${{ matrix.api-level }}
+          name: maestro logs
           path: ~/.maestro/tests/
           if-no-files-found: error
