--- a/e2e/maestro/authorities.yaml
+++ b/e2e/maestro/authorities.yaml
@@ -3,3 +3,14 @@ appId: uk.me.jeremygreen.expoexperiments
 - launchApp
 - assertVisible: "Barnet"
 - assertVisible: "[0-9a-z]{8}"
+- assertVisible:
+    text: "[0-9a-z]{8}"
+- assertVisible:
+    id: "testing1"
+    text: "testing1"
+- assertVisible:
+    id: "testing2"
+    text: "testing2"
+- assertVisible:
+    id: "fingerprint"
+    text: "[0-9a-z]{8}"
