--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -182,6 +182,11 @@ jobs:
     runs-on: macos-14
     needs: ios # for the app
 
+    strategy:
+      fail-fast: false
+      matrix:
+        n: [1, 2, 3]
+
     steps:
       - uses: actions/checkout@v4.1.1
 
@@ -200,6 +205,6 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success() || failure()    # run this step even if previous step failed
         with:
-          name: maestro logs
+          name: maestro logs - ${{ matrix.n }}
           path: ~/.maestro/tests/
           if-no-files-found: error
