--- a/e2e/maestro/authorities.yaml
+++ b/e2e/maestro/authorities.yaml
@@ -7,7 +7,7 @@ appId: uk.me.jeremygreen.expoexperiments
 - assertVisible:
     id: "testing1"
     text: "testing 1"
-    optional: true
+    optional: false
 - assertVisible:
     id: "testing1"
 
