expo prebuild for just android in android job.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -62,7 +62,7 @@ jobs:
     - name: prebuild
       run: |
         . environment
-        expo prebuild
+        expo prebuild --platform android
 
     - name: npm run android-test
       run: |
