Start to implement retries of android maestro jobs where android emulator fails. Still need to connect retry_condition parameter to check that emulator is working. As it stands, my intention is that this should continue to run the maestro test just once.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -118,11 +118,15 @@ jobs:
       # https://github.com/marketplace/actions/android-emulator-runner#usage--examples suggests caching the AVD, but it didn't
       # seem much faster, and the emulator failed to stop when used cached AVD.
       - name: maestro
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          arch: x86_64
-          script: e2e/maestro/run_maestro_ci android
+        uses: Wandalen/wretry.action@v3.8.0
+        with: |
+          action: reactivecircus/android-emulator-runner@v2
+          attempt_limit: 3
+          retry_condition: false
+          with:
+            api-level: ${{ matrix.api-level }}
+            arch: x86_64
+            script: e2e/maestro/run_maestro_ci android
 
       - name: maestro logs
         uses: actions/upload-artifact@v4
