--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -199,7 +199,7 @@ jobs:
             ~/Library/Logs/maestro/
           if-no-files-found: error
 
-      - name: simulator_logs
+      - name: simulator logs
         uses: actions/upload-artifact@v4
         if: success() || failure()    # run this step even if previous step failed
         with:
