--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -114,7 +114,8 @@ jobs:
         uses: Wandalen/wretry.action@v3.8.0
         with:
           attempt_limit: 3
-          retry_condition: false
+          # run_maestro_ci uses with_emulator_status to set emulator_running to true/false using GITHUB_OUTPUT.
+          retry_condition: !step._this.outputs.emulator_running
           action: reactivecircus/android-emulator-runner@v2
           with: |
             api-level: ${{ matrix.api-level }}
