Run android and ios tests five times.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -90,6 +90,7 @@ jobs:
       matrix:
         # Would be good to test on minSdkVersion=21, but https://github.com/mobile-dev-inc/maestro/issues/1207 means need to use 26.
         api-level: [26, 35]
+        n: [1,2,3,4,5]
 
     steps:
       - uses: actions/checkout@v4.1.1
@@ -128,7 +129,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success() || failure()    # run this step even if previous step failed
         with:
-          name: maestro logs - API ${{ matrix.api-level }}
+          name: maestro logs - API ${{ matrix.api-level }} - ${{ matrix.n }}
           path: ~/.maestro/tests/
           if-no-files-found: error
 
@@ -136,7 +137,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success() || failure()    # run this step even if previous step failed
         with:
-          name: logcat.txt - API ${{ matrix.api-level }}
+          name: logcat.txt - API ${{ matrix.api-level }} - ${{ matrix.n }}
           path: logcat.txt
           if-no-files-found: error
   
@@ -182,6 +183,11 @@ jobs:
     runs-on: macos-14
     needs: ios # for the app
 
+    strategy:
+      fail-fast: false
+      matrix:
+        n: [1,2,3,4,5]
+
     steps:
       - uses: actions/checkout@v4.1.1
 
@@ -200,7 +206,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success() || failure()    # run this step even if previous step failed
         with:
-          name: maestro logs
+          name: maestro logs - ${{ matrix.n }}
           path: |
             ~/.maestro/tests/
             ~/Library/Logs/maestro/
@@ -210,7 +216,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success() || failure()    # run this step even if previous step failed
         with:
-          name: simulator logs
+          name: simulator logs - ${{ matrix.n }}
           path: |
             ios_simulator_logs.txt
             ~/Library/Logs/CoreSimulator/CoreSimulator.log
