--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "jest": "29.7.0",
     "jest-expo": "53.0.5",
     "lodash": "4.17.21",
-    "msw": "2.7.6",
+    "msw": "2.8.5",
     "prettier": "3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "5.8.3"
@@ -52,6 +52,9 @@
     ],
     "setupFilesAfterEnv": [
       "<rootDir>/setup-jest.ts"
-    ]
+    ],
+    "testEnvironmentOptions": {
+      "customExportConditions": [""]
+    }
   }
 }
