Start to add Fingerprint RN Turbo Native Module. No native code yet...

--- a/package.json
+++ b/package.json
@@ -45,6 +45,14 @@
     "typescript": "5.8.3"
   },
   "private": true,
+  "codegenConfig": {
+    "name": "ExpoExperiments",
+    "type": "modules",
+    "jsSrcsDir": "specs",
+    "android": {
+      "javaPackageName": "com.expoexperiments"
+    }
+  },
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
