--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
-    "native-fingerprint": "file:./turbo_modules/native-fingerprint"
+    "fingerprint": "file:./turbo_modules/fingerprint"
   },
   "devDependencies": {
     "@babel/core": "7.27.3",
