Remove codegenConfig from top-level package.json, adding javaPackageName to turbo_modules/fingerprint/package.json.

--- a/turbo_modules/fingerprint/package.json
+++ b/turbo_modules/fingerprint/package.json
@@ -6,7 +6,10 @@
   "codegenConfig": {
     "name": "FingerprintSpec",
     "type": "modules",
-    "jsSrcsDir": "src"
+    "jsSrcsDir": "src",
+    "android": {
+      "javaPackageName": "uk.me.jeremygreen.expoexperiments"
+    }
   },
   "author": " <> ()",
   "license": "UNLICENSED",
