Remove patch-project from app.json plugins list too·

--- a/app.json
+++ b/app.json
@@ -37,9 +37,6 @@
         "projectId": "9980ae3b-7d5d-4df7-9b14-31ef911db1b7"
       }
     },
-    "owner": "jgreen210",
-    "plugins": [
-      "patch-project"
-    ]
+    "owner": "jgreen210"
   }
 }
