Revert white space change in package.json.

--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
       "<rootDir>/setup-jest.ts"
     ],
     "testEnvironmentOptions": {
-      "customExportConditions": [
-        ""
-      ]
+      "customExportConditions": [""]
     }
   }
 }
