Move all turbo module code to uk.me.jeremygreen.expoexperiments.fingerprint java package.

--- a/turbo_modules/fingerprint/package.json
+++ b/turbo_modules/fingerprint/package.json
@@ -6,10 +6,7 @@
   "codegenConfig": {
     "name": "FingerprintSpec",
     "type": "modules",
-    "jsSrcsDir": "src",
-    "android": {
-      "javaPackageName": "uk.me.jeremygreen.expoexperiments"
-    }
+    "jsSrcsDir": "src"
   },
   "author": " <> ()",
   "license": "UNLICENSED",
