--- a/turbo_modules/fingerprint/android/build.gradle
+++ b/turbo_modules/fingerprint/android/build.gradle
@@ -26,7 +26,7 @@ def getExtOrIntegerDefault(name) {
 }
 
 android {
-  namespace "com.fingerprint"
+  namespace "uk.me.jeremygreen.expoexperiments.fingerprint"
 
   compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
 
@@ -79,5 +79,5 @@ dependencies {
 react {
   jsRootDir = file("../src/")
   libraryName = "Fingerprint"
-  codegenJavaPackageName = "com.fingerprint"
+  codegenJavaPackageName = "uk.me.jeremygreen.expoexperiments.fingerprint"
 }
