iOS implementation and an end-to-end test.

--- a/e2e/maestro/authorities.yaml
+++ b/e2e/maestro/authorities.yaml
@@ -16,6 +16,11 @@ jsEngine: graaljs
 #     text: "[0-9a-f]{8}"
 - assertVisible:
     id: "fingerprintExpo"
+- assertVisible:
+    id: "fingerprintTurbo"
 - copyTextFrom:
     id: "fingerprintExpo"
+- assertTrue: ${maestro.copiedText.match(/[0-9a-f]{8}/)}
+- copyTextFrom:
+    id: "fingerprintTurbo"
 - assertTrue: ${maestro.copiedText.match(/[0-9a-f]{8}/)}
