Tee crash backtrace into GITHUB_STEP_SUMMARY, so it also appears in step logs.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -219,5 +219,5 @@ jobs:
                 printf '\n%s:\n' "${f}"
                 tail -n +2 "${f}" | jq -r '.lastExceptionBacktrace[].symbol'
                 printf '```\n'
-              } >> "${GITHUB_STEP_SUMMARY}"
+              } | tee -a "${GITHUB_STEP_SUMMARY}"
             done
