Add modulesProvider to package.json - https://reactnative.dev/docs/turbo-native-modules-ios#register-the-native-module-in-your-app.

--- a/turbo_modules/fingerprint/package.json
+++ b/turbo_modules/fingerprint/package.json
@@ -6,7 +6,12 @@
   "codegenConfig": {
     "name": "FingerprintSpec",
     "type": "modules",
-    "jsSrcsDir": "src"
+    "jsSrcsDir": "src",
+    "ios": {
+      "modulesProvider": {
+        "Fingerprint": "Fingerprint"
+      }
+    }
   },
   "author": " <> ()",
   "license": "UNLICENSED",
