$ npx @sentry/wizard@latest -i reactNative --saas --org jeremy-green --project expo-experiments
...version 6.1.2.

--- a/app.json
+++ b/app.json
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
@@ -37,6 +35,16 @@
         "projectId": "9980ae3b-7d5d-4df7-9b14-31ef911db1b7"
       }
     },
-    "owner": "jgreen210"
+    "owner": "jgreen210",
+    "plugins": [
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "expo-experiments",
+          "organization": "jeremy-green"
+        }
+      ]
+    ]
   }
 }
