--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ci": "npm run lint && tsc && npm test && npm run android-test"
   },
   "dependencies": {
+    "@sentry/react-native": "^6.19.0",
     "@tanstack/react-query": "5.77.2",
     "expo": "53.0.9",
     "expo-dev-client": "5.1.8",
@@ -54,7 +55,9 @@
       "<rootDir>/setup-jest.ts"
     ],
     "testEnvironmentOptions": {
-      "customExportConditions": [""]
+      "customExportConditions": [
+        ""
+      ]
     }
   }
 }
