Sentry doesn't declare promise as a dependency: https://github.com/getsentry/sentry-react-native/issues/2147#issuecomment-3164045521

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "53.0.9",
     "expo-dev-client": "5.1.8",
     "expo-status-bar": "2.2.3",
+    "promise": "8.3.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0"
