android-test step needs sentry token too.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -58,6 +58,9 @@ jobs:
         expo prebuild --platform android
 
     - name: npm run android-test
+      env:
+        SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+        SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
       run: |
         . environment
         npm run android-test
