Run git status checks even if job fails.

--- a/.github/actions/git-status/action.yml
+++ b/.github/actions/git-status/action.yml
@@ -4,6 +4,7 @@ runs:
   using: "composite"
   steps:
     - name: "git status"
+      if: '!cancelled()'
       shell: bash
       run: |
         if [ -n "$(git status --porcelain)" ] ; then
