git status action wasn't running with if: '!cancelled()', so try success() || failure().

--- a/.github/actions/git-status/action.yml
+++ b/.github/actions/git-status/action.yml
@@ -4,7 +4,7 @@ runs:
   using: "composite"
   steps:
     - name: "git status"
-      if: '!cancelled()'
+      if: success() || failure() # Always run (unless job cancelled).
       shell: bash
       run: |
         if [ -n "$(git status --porcelain)" ] ; then
