Need to use -x. Ignore node_modules.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,9 +18,12 @@ jobs:
         npm ci
     - name: shellcheck
       uses: ludeeus/action-shellcheck@2.0.0
+      env:
+        SHELLCHECK_OPTS: -x
       with:
         version: v0.11.0
         additional_files: scripts/* e2e/maestro/run_maestro_ci
+        ignore_names: node_modules
 
     - name: npm run lint
       run: |
