ignore .common.sh (it's sourced). Try different way to ignore node_modules/.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         version: v0.11.0
         additional_files: scripts/* e2e/maestro/run_maestro_ci
-        ignore_names: node_modules
+        ignore_paths: .common.sh ./node_modules
 
     - name: npm run lint
       run: |
