--- a/turbo_modules/fingerprint/android/build.gradle
+++ b/turbo_modules/fingerprint/android/build.gradle
@@ -74,6 +74,7 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  testImplementation 'junit:junit:4.13.2'
 }
 
 react {
