Store turbo_modules/fingerprint android unit test report on CI.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -90,6 +90,7 @@ jobs:
         path: |
           android/app/build/reports/tests
           modules/expo-experiments/android/build/reports/tests
+          turbo_modules/fingerprint/android/build/reports/tests
 
     - name: release apk build
       env:
