Add --no-install option to expo prebuild command on CI - npm install is run by earlier step.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -72,7 +72,7 @@ jobs:
     - name: prebuild
       run: |
         . environment
-        expo prebuild --platform android
+        expo prebuild --platform android --no-install
 
     - name: npm run android-test
       env:
